Atualização de index

--- a/index.html
+++ b/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dennis Silva</title>
 </head>
+
 <body>
-    
+
+    <header class="container">
+        <h1>Dennis da Silva Pedro</h1>
+        <br>
+    </header>
+
+    <nav class="container menu">
+        <ul>
+            <li><a href="#">Página Inicial</a></li>
+            <li><a href="#">Sobre Mim</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+            <div class="infos">
+                <p><strong>Profissão</strong> Analista de Dados</p>
+                <p><strong>Data do Nascimento</strong> 29/11/1998</p>
+            </div>
 
 
+        <section class="principal">
+
+            <p>Sou um profissional com habilidades analíticas avançadas e uma sólida capacidade de resolver problemas.
+                Possuo excelentes habilidades organizacionais. Meu conhecimento em informática, tanto em hardware quanto
+                em software, complementa minhas habilidades técnicas.
+                Sou dedicado, curioso e estou sempre em busca de aprendizado contínuo para me manter atualizado com as
+                últimas tendências e tecnologias da área.</p>
+
+        </section>
+    </div>
 
 
-
+    <footer class="container">
+        <br>
+        <h1>Desenvolvido para fins educacionais</h1>
+        </header>
 
 </body>
+
 </html>
