--- a/index.html
+++ b/index.html
@@ -12,38 +12,47 @@
 
     <header class="container">
         <h1>Dennis da Silva Pedro</h1>
-        <br>
     </header>
 
     <nav class="container menu">
         <ul>
-            <li><a href="#">Página Inicial</a></li>
+            <li><a href="https://dennissilvatm.github.io/estudos/">Página Inicial</a></li>
             <li><a href="#">Sobre Mim</a></li>
+            <li><a href="#">Projetos</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
+    <h2>Bem Vindo</h2>
 
-    <div class="container">
-            <div class="infos">
-                <p><strong>Profissão</strong> Analista de Dados</p>
-                <p><strong>Data do Nascimento</strong> 29/11/1998</p>
-            </div>
+    <div class="div1">
+        <p class="p_inicial">Bem-vindo ao site! Aqui, tenho o prazer de compartilhar as habilidades fundamentais que
+            adquiri no desenvolvimento web, criando um espaço educativo e acessível para explorar esse fascinante mundo
+            online.</p>
 
+        <p class="p_inicial">Ao navegar pelo site, você terá a oportunidade de observar como apliquei conceitos básicos
+            de design e funcionalidade. Cada elemento foi meticulosamente desenvolvido para facilitar a compreensão e
+            destacar as habilidades que estou aprimorando.</p>
 
-        <section class="principal">
+        <p class="p_inicial">Gostaria também de ressaltar os diversos recursos de desenvolvimento web incorporados neste
+            projeto. Desde a seleção cuidadosa de linguagens de marcação, como HTML, e a estilização com CSS, até a
+            implementação de funcionalidades dinâmicas com JavaScript, cada aspecto foi habilmente trabalhado para
+            proporcionar uma experiência de usuário fluida e envolvente.</p>
 
-            <p>Sou um profissional com habilidades analíticas avançadas e uma sólida capacidade de resolver problemas.
-                Possuo excelentes habilidades organizacionais. Meu conhecimento em informática, tanto em hardware quanto
-                em software, complementa minhas habilidades técnicas.
-                Sou dedicado, curioso e estou sempre em busca de aprendizado contínuo para me manter atualizado com as
-                últimas tendências e tecnologias da área.</p>
+        <p class="p_inicial">Este projeto reflete meu comprometimento em explorar e aplicar uma variedade de ferramentas
+            essenciais no desenvolvimento web, contribuindo para uma compreensão abrangente e prática desses conceitos.
+            Agradeço pela sua visita e espero que esta jornada pelo universo do desenvolvimento web seja informativa e
+            inspiradora.</p>
 
-        </section>
+        <p class="p_inicial">Sinta-se à vontade para explorar e descobrir como os fundamentos do desenvolvimento web
+            podem ser simultaneamente divertidos e educativos. Agradeço pela sua presença e esperamos que desfrute dessa
+            experiência comigo!</p>
     </div>
 
+    <div class="div2">
+        <img src="Programming.jpg" class="imagem_programming">
+    </div>
 
     <footer class="container">
-        <br>
         <h1>Desenvolvido para fins educacionais</h1>
         </header>
 
