--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             inspiradora.</p>
 
         <p class="p_inicial">Sinta-se à vontade para explorar e descobrir como os fundamentos do desenvolvimento web
-            podem ser simultaneamente divertidos e educativos. Agradeço pela sua presença e esperamos que desfrute dessa
+            podem ser simultaneamente divertidos e educativos. Agradeço pela sua presença e espero que desfrute dessa
             experiência comigo!</p>
     </div>
 
