--- a/sobre.html
+++ b/sobre.html
@@ -17,9 +17,9 @@
     <nav class="container menu">
         <ul>
             <li><a href="https://dennissilvatm.github.io/estudos/">Página Inicial</a></li>
-            <li><a href="#">Sobre Mim</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="https://dennissilvatm.github.io/estudos/sobre.html">Sobre Mim</a></li>
+            <li><a href="https://dennissilvatm.github.io/estudos/projetos.html">Projetos</a></li>
+            <li><a href="https://dennissilvatm.github.io/estudos/contato.html">Contato</a></li>
         </ul>
     </nav>
 
