--- a/contato.html
+++ b/contato.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Dennis Silva</title>
+    <script src="site.js"></script>
 </head>
 
 <body>
 
     <header class="container">
         <h1>Dennis da Silva Pedro</h1>
-        <br>
     </header>
 
     <nav class="container menu">
@@ -24,37 +24,47 @@
         </ul>
     </nav>
 
+    <div>
+        <h3>Entre em contato</h3>
+        <br>
+    </div>
 
     <!-- FORMULÁRIO PARA CONTATO -->
-    <form action: "" method:"POST">
+    <form>
 
         <!-- CAMPO DE PREENCHIMENTO DE NOME -->
         <label for="nome">Nome:</label>
-        <input type="text" name="nome" placeholder="Digite seu nome" size="50" maxlength="50">
+        <input type="text" name="nome" placeholder="Digite seu nome" size="50" maxlength="50" required>
         <br><br>
+
         <!-- CAMPO DE PREENCHIMENTO DE E-MAIL -->
         <label for="email">E-mail:</label>
-        <input type="text" name="email" placeholder="Digite seu e-mail" size="50" maxlength="50">
+        <input type="email" name="email" placeholder="Digite seu e-mail" size="50" maxlength="50" required>
         <br><br>
+
         <!-- CAMPO DE PREENCHIMENTO DE SEXO -->
-        <label for="sexo">Sexo:</label>
-        <input type="radio" name="sexo[]" value="Masculino"> Masculino
+        <label for="sexo">Sexo:</label><br><br>
+        <input type="radio" name="sexo[]" value="Masculino"> <Label>Masculino</Label>
         <br><br>
-        <label for="sexo">Sexo:</label>
-        <input type="radio" name="sexo[]" value="Feminino"> Feminino
+        <input type="radio" name="sexo[]" value="Feminino"> <Label>Feminino</Label>
         <br><br>
+
+        <!-- CAMPO DE PREENCHIMENTO DE MENSAGEM -->
+        <label for="mensagem" class="msg">Mensagem:</label><br><br>
+        <textarea name="mensagem" placeholder="Digite sua mensagem" rows="8" cols="60" maxlength="500" required></textarea>
+
+
+        <br><br>
+
         <!-- BOTÃO DE ENVIO DO FORMULÁRIO -->
-        <input name="submit" type="submit" id="submit" Value="Enviar">
+        <button onclick="enviaDados()">Enviar</button>
 
     </form>
 
-    </div>
-
 
     <footer class="container">
-        <br>
         <h1>Desenvolvido para fins educacionais</h1>
-        </header>
+    </footer>
 
 </body>
 
