--- a/projetos.html
+++ b/projetos.html
@@ -23,9 +23,56 @@
         </ul>
     </nav>
 
+
+    <div class="descricao_projeto">
+        <br>
+        <h4>Análise de Dados de Logística</h4>
+        <br>
+        <p class="info_projeto">Projeto de análise de dados de Logística com foco em um relatório simples e objetivo.
+            Os dados desse
+            relatório foram alterados para dados genéricos.</p>
+
+        <br>
+        <img src="Mini Projeto 4 - Análise de Dados de Logística.jpg" class="img_projeto">
+        <br>
+
+    </div>
+
+    <hr>
+
+    <div class="descricao_projeto">
+        <br>
+        <h4>Análise de Dados Financeiros</h4>
+        <br>
+        <p class="info_projeto">Projeto de análise de dados financeiros com foco em um relatório simples e objetivo.
+            Os dados desse
+            relatório foram alterados para dados genéricos.</p>
+
+        <br>
+        <img src="Mini Projeto 5 - Análise de Dados de Dados Financeiros.jpg" class="img_projeto">
+        <br>
+
+    </div>
+
+    <hr>
+
+    <div class="descricao_projeto">
+        <br>
+        <h4>Análise de Dados de RH</h4>
+        <br>
+        <p class="info_projeto">Projeto de análise de dados de RH com foco em um relatório simples e objetivo.
+            Os dados desse
+            relatório foram alterados para dados genéricos.</p>
+
+        <br>
+        <img src="Mini Projeto 3 - Análise de Dados de RH.jpg" class="img_projeto">
+        <br>
+
+    </div>
+
     <footer class="container">
         <h1>Desenvolvido para fins educacionais</h1>
-        </header>
+    </footer>
 
 </body>
 
