--- a/sobre.html
+++ b/sobre.html
@@ -37,11 +37,27 @@
 
         <div class="section_sobre">
 
-            <p>Sou um profissional com habilidades analíticas avançadas e uma sólida capacidade de resolver problemas.
-                Possuo excelentes habilidades organizacionais. Meu conhecimento em informática, tanto em hardware quanto
-                em software, complementa minhas habilidades técnicas.
-                Sou dedicado, curioso e estou sempre em busca de aprendizado contínuo para me manter atualizado com as
-                últimas tendências e tecnologias da área.</p>
+            <p>Sou um profissional dotado de habilidades analíticas avançadas e uma sólida capacidade de resolução de
+                problemas, destacando-me pela excelência em organização. Meu conhecimento abrangente em informática,
+                abarcando tanto hardware quanto software, enriquece minhas habilidades técnicas, proporcionando uma
+                abordagem holística para enfrentar desafios complexos.</p>
+
+            <p>Minha trajetória profissional está profundamente enraizada em Vendas e Marketing, onde, ao longo dos
+                anos, obtive experiência valiosa no atendimento a uma ampla gama de clientes B2C e B2B. Esta jornada
+                permitiu-me aprofundar minha compreensão sobre prospecção e atendimento ao cliente. Atualmente,
+                desempenho um papel crucial na análise de qualidade de vendas e nas atividades relacionadas ao pós-venda
+                e atendimento ao cliente em uma empresa de promoção de vendas.</p>
+
+            <p>Em paralelo, estou imerso em minha primeira graduação no curso Tecnólogo de Ciência de Dados, com foco
+                primordial em Análise de Dados e Inteligência de Negócios. Possuo habilidades avançadas na ferramenta
+                Power BI e domino o inglês fluentemente. Recentemente, adquiri proficiência em linguagens como SQL e
+                Python durante minha formação acadêmica.</p>
+
+            <p>Minha busca constante por conhecimento é evidenciada pela minha capacidade de inovação e adaptação ágil
+                às mudanças, garantindo que eu permaneça na vanguarda do meu campo. Encaro o aprendizado como um
+                processo contínuo e indispensável para o sucesso em um cenário profissional dinâmico. Estou animado para
+                aplicar essas habilidades e mentalidade proativa na abordagem de novos desafios, contribuindo de maneira
+                positiva para ambientes de trabalho igualmente dinâmicos.</p>
         </div>
     </div>
 
