--- a/sobre.html
+++ b/sobre.html
@@ -45,8 +45,7 @@
             <p>Minha trajetória profissional está profundamente enraizada em Vendas e Marketing, onde, ao longo dos
                 anos, obtive experiência valiosa no atendimento a uma ampla gama de clientes B2C e B2B. Esta jornada
                 permitiu-me aprofundar minha compreensão sobre prospecção e atendimento ao cliente. Atualmente,
-                desempenho um papel crucial na análise de qualidade de vendas e nas atividades relacionadas ao pós-venda
-                e atendimento ao cliente em uma empresa de promoção de vendas.</p>
+                exerço o cargo de Analista de Dados em uma startup brasileira de tecnologia.</p>
 
             <p>Em paralelo, estou imerso em minha primeira graduação no curso Tecnólogo de Ciência de Dados, com foco
                 primordial em Análise de Dados e Inteligência de Negócios. Possuo habilidades avançadas na ferramenta
