--- a/index.html
+++ b/index.html
@@ -4,26 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Dennis Silva</title>
+    <link rel="stylesheet" href="style.css"> <!-- LINK DE ACESSO AO CSS -->
+    <title>Dennis Silva</title> <!--TÍTULO DA PÁGINA -->
 </head>
+
+<!-- AQUI COMEÇA O SCRIPT QUE APARECE NA PÁGINA -->
 
 <body>
 
+    <!-- ESSE É O CABEÇALHO PRINCIPAL DA PÁGINA -->
     <header class="container">
-        <h1>Dennis da Silva Pedro</h1>
+        <h1>Dennis da Silva Pedro</h1> <!--TÍTULO -->
     </header>
 
+    <!-- ESSE É O MENU PRINCIPAL DA PÁGINA -->
     <nav class="container menu">
-        <ul>
+        <ul> <!-- LISTA NÃO ORDENADA DE LINKS DE ACESSO DO SITE -->
             <li><a href="https://dennissilvatm.github.io/estudos/">Página Inicial</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/sobre.html">Sobre Mim</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/projetos.html">Projetos</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/contato.html">Contato</a></li>
         </ul>
     </nav>
-    <h2>Bem Vindo</h2>
 
+    <!-- ESTE É O SEGUNDO CABEÇALHO DA PÁGINA -->
+    <h2>Bem Vindo</h2> <!--TÍTULO -->
+
+    <!-- TODO O TEXTO DESSA PÁGINA ESTÁ DIVIDIDO EM PARÁGRAFOS E DENTRO DE UMA DIV PARA MELHOR ORGANIZAÇÃO -->
     <div class="div1">
         <p class="p_inicial">Bem-vindo ao site! Aqui, tenho o prazer de compartilhar as habilidades fundamentais que
             adquiri no desenvolvimento web, criando um espaço educativo e acessível para explorar esse fascinante mundo
@@ -48,14 +55,17 @@
             experiência comigo!</p>
     </div>
 
+    <!-- ESTA É A DIV FEITA PARA ALOCAR A IMAGEM DA PÁGINA -->
     <div class="div2">
         <img src="Programming.jpg" class="imagem_programming">
     </div>
 
+    <!-- ESTE É O RODAPÉ DA PÁGINA E SEU TÍTULO -->
     <footer class="container">
-        <h1>Desenvolvido para fins educacionais</h1>
+        <h1>Desenvolvido para fins educacionais</h1> <!--TÍTULO -->
         </header>
 
 </body>
+<!-- AQUI TERMINA O SCRIPT QUE APARECE NA PÁGINA -->
 
 </html>
