--- a/projetos.html
+++ b/projetos.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Dennis Silva</title>
+    <link rel="stylesheet" href="style.css"> <!-- LINK DE ACESSO AO CSS -->
+    <title>Dennis Silva</title> <!--TÍTULO DA PÁGINA -->
 </head>
+
+<!-- AQUI COMEÇA O SCRIPT QUE APARECE NA PÁGINA -->
 
 <body>
 
+    <!-- ESSE É O CABEÇALHO PRINCIPAL DA PÁGINA -->
     <header class="container">
-        <h1>Dennis da Silva Pedro</h1>
+        <h1>Dennis da Silva Pedro</h1> <!--TÍTULO -->
     </header>
 
+    <!-- ESSE É O MENU PRINCIPAL DA PÁGINA -->
     <nav class="container menu">
-        <ul>
+        <ul> <!-- LISTA NÃO ORDENADA DE LINKS DE ACESSO DO SITE -->
             <li><a href="https://dennissilvatm.github.io/estudos/">Página Inicial</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/sobre.html">Sobre Mim</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/projetos.html">Projetos</a></li>
@@ -24,56 +28,65 @@
     </nav>
 
 
+    <!--AQUI FICA A DIV DO PRIMEIRO PROJETO INSERIDO NESSA PÁGINA -->
     <div class="descricao_projeto">
-        <br>
-        <h4>Análise de Dados de Logística</h4>
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
+        <h4>Análise de Dados de Logística</h4> <!--TÍTULO -->
+        <br> <!-- QUEBRA DE LINHA -->
+        <!-- PARÁGRAFO -->
         <p class="info_projeto">Projeto de análise de dados de Logística com foco em um relatório simples e objetivo.
             Os dados desse
             relatório foram alterados para dados genéricos.</p>
 
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
+        <!-- IMAGEM DO PROJETO -->
         <img src="Mini Projeto 4 - Análise de Dados de Logística.jpg" class="img_projeto">
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
 
     </div>
 
-    <hr>
+    <hr> <!-- LINHA DIVISÓRIA -->
 
+    <!-- AQUI FICA A DIV DO SEGUNDO PROJETO INSERIDO NESSA PÁGINA -->
     <div class="descricao_projeto">
-        <br>
-        <h4>Análise de Dados Financeiros</h4>
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
+        <h4>Análise de Dados Financeiros</h4> <!--TÍTULO -->
+        <br> <!-- QUEBRA DE LINHA -->
         <p class="info_projeto">Projeto de análise de dados financeiros com foco em um relatório simples e objetivo.
             Os dados desse
             relatório foram alterados para dados genéricos.</p>
 
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
+        <!-- IMAGEM DO PROJETO -->
         <img src="Mini Projeto 5 - Análise de Dados de Dados Financeiros.jpg" class="img_projeto">
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
 
     </div>
 
-    <hr>
+    <hr> <!-- LINHA DIVISÓRIA -->
 
+    <!-- AQUI FICA A DIV DO TERCEIRO PROJETO INSERIDO NESSA PÁGINA -->
     <div class="descricao_projeto">
-        <br>
-        <h4>Análise de Dados de RH</h4>
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
+        <h4>Análise de Dados de RH</h4> <!--TÍTULO -->
+        <br> <!-- QUEBRA DE LINHA -->
         <p class="info_projeto">Projeto de análise de dados de RH com foco em um relatório simples e objetivo.
             Os dados desse
             relatório foram alterados para dados genéricos.</p>
 
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
+        <!-- IMAGEM DO PROJETO -->
         <img src="Mini Projeto 3 - Análise de Dados de RH.jpg" class="img_projeto">
-        <br>
+        <br> <!-- QUEBRA DE LINHA -->
 
     </div>
 
+    <!-- ESTE É O RODAPÉ DA PÁGINA E SEU TÍTULO -->
     <footer class="container">
-        <h1>Desenvolvido para fins educacionais</h1>
+        <h1>Desenvolvido para fins educacionais</h1> <!--TÍTULO -->
     </footer>
 
 </body>
+<!-- AQUI TERMINA O SCRIPT QUE APARECE NA PÁGINA -->
 
 </html>
