--- a/sobre.html
+++ b/sobre.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Dennis Silva</title>
+    <link rel="stylesheet" href="style.css"> <!-- LINK DE ACESSO AO CSS -->
+    <title>Dennis Silva</title> <!--TÍTULO DA PÁGINA -->
 </head>
+
+<!-- AQUI COMEÇA O SCRIPT QUE APARECE NA PÁGINA -->
 
 <body>
 
+    <!-- ESSE É O CABEÇALHO PRINCIPAL DA PÁGINA -->
     <header class="container">
-        <h1>Dennis da Silva Pedro</h1>
+        <h1>Dennis da Silva Pedro</h1> <!--TÍTULO -->
     </header>
 
+    <!-- ESSE É O MENU PRINCIPAL DA PÁGINA -->
     <nav class="container menu">
-        <ul>
+        <ul> <!-- LISTA NÃO ORDENADA DE LINKS DE ACESSO DO SITE -->
             <li><a href="https://dennissilvatm.github.io/estudos/">Página Inicial</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/sobre.html">Sobre Mim</a></li>
             <li><a href="https://dennissilvatm.github.io/estudos/projetos.html">Projetos</a></li>
@@ -23,18 +27,22 @@
         </ul>
     </nav>
 
+    <!-- AQUI ESTÁ A MAIOR PARTE DO CONTEÚDO DA PÁGINA DENTRO DE UMA DIV-->
     <div class="container">
 
+        <!-- DIV FEITA PARA ALOCAR A IMAGEM DA PÁGINA -->
         <div class="div_imagem_sobre">
             <img src="perfil.jpg" class="imagem_perfil">
         </div>
 
+        <!-- DIV FEITA PARA ALOCAR O CONTEÚDO ABAIXO DA IMAGEM -->
         <div class="div_infos">
             <p><strong>Profissão</strong> Analista de Dados</p>
             <p><strong>Data do Nascimento</strong> 29/11/1998</p>
             <p><strong>Curso</strong> Ciência de Dados</p>
         </div>
 
+        <!-- TODO O TEXTO DESSA PÁGINA ESTÁ DIVIDIDO EM PARÁGRAFOS E DENTRO DE UMA DIV PARA MELHOR ORGANIZAÇÃO -->
         <div class="section_sobre">
 
             <p>Sou um profissional dotado de habilidades analíticas avançadas e uma sólida capacidade de resolução de
@@ -60,11 +68,12 @@
         </div>
     </div>
 
-
+    <!-- ESTE É O RODAPÉ DA PÁGINA E SEU TÍTULO -->
     <footer class="container">
-        <h1>Desenvolvido para fins educacionais</h1>
+        <h1>Desenvolvido para fins educacionais</h1> <!--TÍTULO -->
     </footer>
 
 </body>
+<!-- AQUI TERMINA O SCRIPT QUE APARECE NA PÁGINA -->
 
 </html>
